first model and broke webui

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,10 +15,10 @@
     <th>Queen Levels</th>
     <tr>
         <td>
-            {{clan.clanName}}
+            {{clan.clan_name}}
         </td>
         <td>
-            {{clan.clanLevel}}
+            {{clan.clan_level}}
         </td>
         <td>
             {{clan.avgQueenLevel}}
