--- a/templates/playerlist.html
+++ b/templates/playerlist.html
@@ -14,10 +14,10 @@
     <th>Queen Level</th>
     <tr>
         <td>
-            {{member.clanName}}
+            {{member.clan_name}}
         </td>
         <td>
-            {{member.clanLevel}}
+            {{member.clan_level}}
         </td>
         <td>
             {{member.avgQueenLevel}}
